Fix label z-index for hub dropdown overlap VC-1545

--- a/public/sources/less/ui/hubTeaser/styles.less
+++ b/public/sources/less/ui/hubTeaser/styles.less
@@ -33,7 +33,7 @@
 
     .vcv-ui-form-button-group-dropdown {
       border: 0;
-      z-index: 4;
+      z-index: 5;
     }
 
     .vcv-ui-form-button-group-dropdown-item {
